# safe-ptr

./: .gitignore  CMakeLists.txt  README.md  license.txt  readme.md
examples/: basic-usage.cpp
include/: SafePtr.hpp
tests/: assert.hpp  methods.hpp  print.hpp  ref-count.hpp  rule-of-5.hpp  test-all.cpp
